
Bug fixes:
DietPi-Auto_Start | Resolved an issue where RetroPie power features did not function inside emulationstation. Many thanks to 'GaM3r2Xtreme' for providing this fix: http://dietpi.com/phpbb/viewtopic.php?f=9&t=532&p=3674#p3674
DietPi-Backup | Will preserve permissions during backups. Many thanks to @willgfx for providing this fix: https://github.com/Fourdee/DietPi/pull/595
DietPi-Config | H3-analogue soundcard is now correctly set.

-----------------------------------------------------------------------------------------------------------

v136
(01/11/16)

Changes / Improvements / Optimizations:
DietPi-Software | Mopidy: installation now available: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=3611#p3611
DietPi-Software | YMPD: installation updated to 1.3.0
DietPi-Config | RPi: Onboard RPI soundcard will now be disabled when another addon card is selected (frees up some memory)
DietPi-Config | RPi: The known method of forcing audio output on RPi to HDMI or 3.5mm jack is no longer effective, and, has been removed from dietpi-config (amixer cset numid=3 [0-2]).
DietPi-JustBoom | Can now be used with any soundcard, and, is now available when ALSA is installed from dietpi-software, and from dietpi-config audio options.
Image download | RPi & JustBoom images have been updated to latest versions.

Bug fixes:
DietPi-Software | Will no longer prompt the user, when dpkg requests to overwrite a configuration file, the existing conf will be used by default.
DietPi-Software | Resolved an issue where NoIp2 Sysinit service would cause a systemD double free or corruption error. Many thanks to HuffPuffin for reporting this issue! : https://github.com/Fourdee/DietPi/issues/589
DietPi-Software | Resolved an issue where OpenSSH server host keys were not being generated during installation. This previously could result in SSH connections being rejected.