@@ -119,7 +119,7 @@ apt-get dist-upgrade -y
 
 #install packages
 echo -e "CONF_SWAPSIZE=0" > /etc/dphys-swapfile
-apt-get install -y ethtool p7zip-full hfsplus iw debconf-utils xz-utils ifmetric fbset wpasupplicant resolvconf bc dbus bzip2 psmisc bash-completion cron whiptail sudo ntp ntfs-3g dosfstools parted hdparm pciutils usbutils zip htop wput wget fake-hwclock dphys-swapfile curl unzip ca-certificates console-setup console-data console-common keyboard-configuration wireless-tools wireless-regdb crda --no-install-recommends
+apt-get install -y ethtool p7zip-full hfsplus iw debconf-utils xz-utils fbset wpasupplicant resolvconf bc dbus bzip2 psmisc bash-completion cron whiptail sudo ntp ntfs-3g dosfstools parted hdparm pciutils usbutils zip htop wput wget fake-hwclock dphys-swapfile curl unzip ca-certificates console-setup console-data console-common keyboard-configuration wireless-tools wireless-regdb crda --no-install-recommends
 
 #??? bluetooth if onboard device
 apt-get install -y bluetooth
@@ -321,9 +321,10 @@ _EOF_
 echo -e "vm.swappiness=1" >> /etc/sysctl.conf
 
 #login,
-#echo -e "\n/DietPi/dietpi/login" >> /root/.bashrc
+echo -e "\n/DietPi/dietpi/login" >> /root/.bashrc
 
 #Network
+rm -R /etc/network/interfaces # armbian symlink for bulky network-manager
 cp /boot/dietpi/conf/network_interfaces /etc/network/interfaces
 /DietPi/dietpi/func/obtain_network_details
 # - enable allow-hotplug eth0 after copying.
