@@ -489,11 +489,13 @@
 	Check_Install_PreReqs(){
 
 		#Rsync
-		if (( $(dpkg -l | grep -ci -m1 ' rsync ') == 0 )); then
-			echo -e "\n\nInstalling Rsync, please wait....\n\n"
+		if (( ! $(dpkg --get-selections | grep -ci -m1 '^rsync[[[:space:]]') )); then
+
+			/DietPi/dietpi/func/dietpi-notify 2 "Installing Rsync, please wait....\n"
 			sleep 1
 
 			apt-get install rsync -y
+
 		fi
 
 	}
