@@ -3439,7 +3439,7 @@ _EOF_
 				elif (( $HW_CPUID == 1 )); then
 
 					OPTION=$(whiptail --title "$WHIP_TITLE" --menu "Current : $soundcard_current" --default-item "$soundcard_current" --cancel-button "$TEXT_MENU_BACK" 13 60 2 \
-					"H3-hdmi" "HDMI (Default)" \
+					"H3-hdmi" "HDMI" \
 					"H3-analogue" "3.5mm analogue" 3>&1 1>&2 2>&3)
 
 					CHOICE=$?
