@@ -58,6 +58,7 @@
 
 		'/sys/class/thermal/thermal_zone0/temp'
 		'/sys/devices/platform/sunxi-i2c.0/i2c-0/0-0034/temp1_input'
+		'/sys/class/hwmon/hwmon0/device/temp_label'
 
 	)
 
