@@ -95,11 +95,14 @@
 		if (( $HW_MODEL == 64 )); then
 
 			HW_MODEL_DESCRIPTION='NanoPi NEO Air'
+			HW_CPUID=1
 
 		#NanoPi M1
 		elif (( $HW_MODEL == 63 )); then
 
 			HW_MODEL_DESCRIPTION='NanoPi M1/T1'
+			IMAGE_ADDITIONAL_CREDITS='ARMbian'
+			HW_CPUID=1
 
 		#NanoPi M3
 		elif (( $HW_MODEL == 62 )); then
