@@ -250,7 +250,7 @@ _EOF_
 	aSOFTWARE_REQUIRES_NODEJS=0
 
 	# - Available for
-	MAX_HW_MODEL=62		#This needs to match highest HW_MODEL value in dietpi-obtain_hw_model
+	MAX_HW_MODEL=64		#This needs to match highest HW_MODEL value in dietpi-obtain_hw_model
 	MAX_HW_ARCH=21		#This needs to match highest HW_ARCH value in dietpi-obtain_hw_model
 	#	2D array (well, bash style)
 	declare -A aSOFTWARE_AVAIL_HW_MODEL
@@ -433,29 +433,8 @@ _EOF_
 		  aSOFTWARE_REQUIRES_DESKTOP[$index_current]=1
 			 aSOFTWARE_ONLINEDOC_URL[$index_current]='http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=3011#p3011'
 
-		# - disable for all
-		# for ((i=0; i<=$MAX_HW_MODEL; i++))
-		# do
-
-			# aSOFTWARE_AVAIL_HW_MODEL[$index_current,$i]=0
-
-		# done
-
-		# - reenable for RPi 2+ requires openGL enable driver
-		# for ((i=2; i<10; i++))
-		# do
-
-			# aSOFTWARE_AVAIL_HW_MODEL[$index_current,$i]=1
-
-		# done
-
-		# - reenable for Pine A64 | software render
-		# for ((i=40; i<50; i++))
-		# do
-
-			# aSOFTWARE_AVAIL_HW_MODEL[$index_current,$i]=1
-
-		# done
+		# - Disabled for HW_ARCH
+		aSOFTWARE_AVAIL_HW_ARCH[$index_current,21]=0
 
 
 		#Remote Desktops
@@ -518,18 +497,8 @@ _EOF_
 	  aSOFTWARE_REQUIRES_XSERVERXORG[$index_current]=1
 			 aSOFTWARE_ONLINEDOC_URL[$index_current]='f=8&t=5#p43'
 
-		# - Disabled for HW_ARCH
-		aSOFTWARE_AVAIL_HW_ARCH[$index_current,21]=0
-
-		# - Disabled for HW_MODEL
-		aSOFTWARE_AVAIL_HW_MODEL[$index_current,30]=0
-		aSOFTWARE_AVAIL_HW_MODEL[$index_current,31]=0
-		aSOFTWARE_AVAIL_HW_MODEL[$index_current,50]=0
-		aSOFTWARE_AVAIL_HW_MODEL[$index_current,51]=0
-		aSOFTWARE_AVAIL_HW_MODEL[$index_current,60]=0
-
-		# - Disabled for All Pine64
-		for ((i=40; i<50; i++))
+		# - Disabled for All non-RPi/Odroid boards
+		for ((i=20; i<$MAX_HW_MODEL; i++))
 		do
 
 			aSOFTWARE_AVAIL_HW_MODEL[$index_current,$i]=0
@@ -5093,7 +5062,10 @@ _EOF_
 			Banner_Installing
 			AGI openssh-server --no-install-recommends
 
-			sed -i '/PermitRootLogin/c\PermitRootLogin yes' /etc/ssh/sshd_config
+
+			# - Remove all references before adding the entry: https://github.com/Fourdee/DietPi/issues/604
+			sed -i '/PermitRootLogin[[:space:]]/d' /etc/ssh/sshd_config
+			echo -e "\n\n#Allow root login over SSH\nPermitRootLogin yes" >> /etc/ssh/sshd_config
 
 			#Generate host keys
 			# - remove all previous
@@ -8482,6 +8454,10 @@ _EOF_
 
 			AGP dnsmasq
 			pihole uninstall
+
+			rm -R /etc/pihole
+			rm -R /etc/.pihole
+			rm -R /var/www/html/admin
 
 			# - symlink
 			rm -R /var/www/pihole
