@@ -10,7 +10,8 @@ General | Added exit paths to DietPi scripts. This is to prevent use by underpri
 Bug fixes:
 DietPi-Auto_Start | Resolved an issue where RetroPie power features did not function inside emulationstation. Many thanks to 'GaM3r2Xtreme' for providing this fix: http://dietpi.com/phpbb/viewtopic.php?f=9&t=532&p=3674#p3674
 DietPi-Backup | Will preserve permissions during backups. Many thanks to @willgfx for providing this fix: https://github.com/Fourdee/DietPi/pull/595
-DietPi-Config | H3-analogue soundcard is now correctly set.
+DietPi-Config | H3-analogue soundcard is now correctly set. Many thanks to Frans for reporting this issue: http://dietpi.com/phpbb/viewtopic.php?f=11&t=843&p=3773#p3756
+General | NanoPi M3/T3: Temp readouts are now functional.
 
 -----------------------------------------------------------------------------------------------------------
 
